--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="no_notes">No notes yet</string>
     <string name="action_create">New note</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
     <string name="action_create_save">Save</string>
     <string name="action_create_cancel">Cancel</string>
     <string name="action_edit_editing">Edit</string>
@@ -17,6 +18,11 @@
     <string name="action_note_deleted">Note is deleted</string>
     <string name="action_note_restored">Note is restored</string>
     <string name="action_undo">Undo</string>
+    <string name="action_drawer_open">open navigation</string>
+    <string name="action_drawer_close">close navigation</string>
+    <string name="action_recent">Recent</string>
+    <string name="action_starred">Starred</string>
+    <string name="action_uncategorized">Uncategorized</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_copy">Copy</string>
     <string name="menu_edit">Edit</string>
@@ -28,7 +34,6 @@
     <string name="menu_about">About</string>
 
     <string name="change_category_title">Chose category</string>
-    <string name="change_category_message">Please enter a category name</string>
     <string name="copy">Copy</string>
 
     <string name="listview_updated_today">Today</string>
