--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="action_edit_cancel">Cancel</string>
     <string name="action_about">About</string>
     <string name="action_select_note">Select note</string>
-    <string name="action_note_deleted">Note is deleted</string>
-    <string name="action_note_restored">Note is restored</string>
+    <string name="action_note_deleted">Note deleted</string>
+    <string name="action_note_restored">Note restored</string>
     <string name="action_undo">Undo</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_copy">Copy</string>
@@ -41,16 +41,16 @@
     <string name="settings_server_settings">Account Settings</string>
     <string name="settings_server">Server</string>
     <string name="settings_url">Server address</string>
-    <string name="settings_url_check_description">Shows if the address can be pinged.</string>
+    <string name="settings_url_check_description">Shows whether the address can be pinged.</string>
     <string name="settings_url_warn_http">WARNING: "http" is unsafe. Please use "https".</string>
     <string name="settings_username">Username</string>
     <string name="settings_password">Password</string>
     <string name="settings_password_unchanged">Password (not changed)</string>
-    <string name="settings_password_check_description">Shows if the credentials are correct.</string>
+    <string name="settings_password_check_description">Displays whether the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
     <string name="settings_view_category">View settings</string>
-    <string name="settings_note_mode">Display mode for notes</string>
+    <string name="settings_note_mode">Display mode for Notes</string>
     <string name="settings_notification_title">\"Create note\" as notification</string>
     <string name="settings_notification">Enable to show a persistent notification for quickly creating new notes.</string>
     <string name="settings_cert_category">Certificates</string>
@@ -93,7 +93,7 @@
     <string name="about_version_title">Version</string>
     <string name="about_version">You are currently using &lt;strong>%1$s&lt;/strong></string>
     <string name="about_maintainer_title">Maintainer</string>
-    <string name="about_maintainer" translatable="false">&lt;a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen&lt;/a></string>
+    <string name="about_maintainer" translatable="false">&lt;a href="https://www.niedermann.it/">Niedermann IT-Dienstleistungen&lt;/a></string>
     <string name="about_developers_title">Developers</string>
     <string name="about_developers" translatable="false">Stefan Niedermann, Kristof Hamann, HeaDBanGer84, Felix Edelmann</string>
     <string name="about_translators_title">Translators</string>
@@ -111,7 +111,7 @@
     <string name="about_app_license_button">View license</string>
     <string name="about_app_icon_author" translatable="false">&lt;a href="http://jancborchardt.net/">Jan C. Borchardt&lt;/a> (&lt;a href="https://github.com/owncloud/notes/commits/master/img/notes.svg">GitHub&lt;/a>)</string>
     <string name="about_icons_disclaimer_title">Icons</string>
-    <string name="about_icons_disclaimer">&lt;p>Original icon made by %1$s&lt;/p>&lt;p>All further icons used by this app are &lt;a href="https://materialdesignicons.com/">Material Design Icons&lt;/a> made by Google Inc. and licensed under a Creative Commons License.&lt;/p></string>
+    <string name="about_icons_disclaimer">&lt;p>Original icon made by %1$s&lt;/p>&lt;p>All further icons used by this app are &lt;a href="https://materialdesignicons.com/">Material Design Icons&lt;/a> made by Google Inc. and licensed under the Apache 2.0 License.&lt;/p></string>
     <string name="about_credits_tab_title">Credits</string>
     <string name="about_contribution_tab_title">Contribution</string>
     <string name="about_license_tab_title">License</string>
@@ -120,7 +120,7 @@
     <string name="widget_note_list_title">Note list</string>
     <string name="widget_single_note_title">Single note</string>
     <string name="widget_create_note">Create Note</string>
-    <string name="widget_not_logged_in">Please login to Notes before using this widget</string>
+    <string name="widget_not_logged_in">Please log in to Notes before using this widget</string>
 
     <string name="activity_select_single_note">Select note</string>
 
