--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
 <resources>
 
     <string name="app_name">Notes</string>
+    <string name="app_icon">App icon</string>
     <string name="no_notes">No notes yet</string>
     <string name="action_create">New note</string>
+    <string name="action_notes">Notes</string>
     <string name="action_settings">Settings</string>
     <string name="action_create_save">Save</string>
     <string name="action_create_cancel">Cancel</string>
@@ -25,6 +27,7 @@
     <string name="menu_preview">Preview</string>
     <string name="menu_share">Share</string>
     <string name="menu_about">About</string>
+    <string name="menu_search">Search</string>
 
     <string name="copy">Copy</string>
 
@@ -102,6 +105,8 @@
 
     <string name="drawer_opened">Drawer opened</string>
     <string name="drawer_closed">Drawer closed</string>
+    <string name="drawer_open">Drawer opened</string>
+    <string name="drawer_close">Drawer closed</string>
 
     <!-- Plurals -->
     <plurals name="ab_selected">
