--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">Notes</string>
     <string name="no_notes">No notes yet</string>
+    <string name="label_all_notes">All notes</string>
+    <string name="label_favorites">Favorites</string>
     <string name="action_create">New note</string>
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
@@ -21,7 +23,6 @@
     <string name="action_drawer_open">open navigation</string>
     <string name="action_drawer_close">close navigation</string>
     <string name="action_recent">Recent</string>
-    <string name="action_starred">Starred</string>
     <string name="action_uncategorized">Uncategorized</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_copy">Copy</string>
